--- a/mobile-computing/task-2/index.html
+++ b/mobile-computing/task-2/index.html
@@ -234,7 +234,7 @@
       <div class="bg-white p-5 rounded-lg shadow-md mb-6">
         <div class="flex flex-col md:flex-row items-center">
           <div class="md:w-1/3 flex justify-center mb-4 md:mb-0">
-            <img src="assets/back-arrow.png" alt="Prior Research on IoT" class="w-2/3 md:w-1/2 mb-4 rounded-lg">
+            <img src="mobile-computing/task-2/assets/back-arrow.png" alt="Prior Research on IoT" class="w-2/3 md:w-1/2 mb-4 rounded-lg">
           </div>
           <div class="md:w-2/3 md:pl-6">
             <h2 class="font-semibold mb-3">Previous Research Overview</h2>
@@ -414,7 +414,7 @@
               <h2 class="font-semibold text-indigo-700">System Architecture</h2>
             </div>
             <div class="flex justify-center">
-              <img src="assets/architecture.png" alt="System Architecture" class="w-2/3 md:w-1/2 rounded-lg mb-4">
+              <img src="mobile-computing/task-2/assets/architecture.png" alt="System Architecture" class="w-2/3 md:w-1/2 rounded-lg mb-4">
             </div>
             <ul class="list-disc pl-5 text-gray-700">
               <li>DHT11 & MQ135 sensors connect to Arduino Uno</li>
@@ -447,7 +447,7 @@
           <div class="bg-white p-5 rounded-lg shadow-md mb-6">
             <div class="flex flex-col md:flex-row items-center">
               <div class="md:w-1/3 flex justify-center mb-4 md:mb-0">
-                  <img src="assets/flowchart.png" alt="Hardware Implementation" class="rounded-lg mb-4">
+                  <img src="mobile-computing/task-2/assets/flowchart.png" alt="Hardware Implementation" class="rounded-lg mb-4">
               </div>
               <div class="md:w-2/3 md:pl-6">
                 <h2 class="font-semibold mb-3">System Flowchart</h2>
@@ -469,7 +469,7 @@
           <div class="bg-yellow-50 p-5 rounded-lg shadow-md mb-6">
             <div class="flex flex-col md:flex-row items-center">
               <div class="md:w-1/3 flex justify-center mb-4 md:mb-0">
-                  <img src="assets/hardware.png" alt="Hardware Implementation" class="rounded-lg mb-4">
+                  <img src="mobile-computing/task-2/assets/hardware.png" alt="Hardware Implementation" class="rounded-lg mb-4">
               </div>
               <div class="md:w-2/3 md:pl-6">
                 <h2 class="font-semibold mb-3">Hardware Configuration</h2>
@@ -499,7 +499,7 @@
         <div class="bg-white p-5 rounded-lg shadow-md">
           <h2 class="font-semibold mb-3 text-indigo-700">Web Interface Visualization</h2>
           <div class="justify-center mb-4">
-            <img src="assets/good.png" alt="Web Interface for Good Air Quality" class="w-2/3 md:w-1/2 rounded-lg mb-3">
+            <img src="mobile-computing/task-2/assets/good.png" alt="Web Interface for Good Air Quality" class="w-2/3 md:w-1/2 rounded-lg mb-3">
             <h3 class="font-medium text-gray-800">Good Air Quality (28 ppm average)</h3>
           </div>
           <div class="space-y-3">
@@ -528,7 +528,7 @@
         <div class="bg-white p-5 rounded-lg shadow-md">
           <h2 class="font-semibold mb-3 text-indigo-700">Air Quality Categories Tested</h2>
           <div class="mb-4">
-            <img src="assets/very-unhealthy.png" alt="All Air Quality Categories" class="w-2/3 md:w-1/2 rounded-lg mb-3">
+            <img src="mobile-computing/task-2/assets/very-unhealthy.png" alt="All Air Quality Categories" class="w-2/3 md:w-1/2 rounded-lg mb-3">
             <h3 class="font-medium text-gray-800">Progression Through All Quality Levels</h3>
           </div>
           <div class="space-y-3">
@@ -555,17 +555,17 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
           <div class="bg-indigo-50 p-4 rounded-lg">
             <h3 class="font-semibold text-indigo-700 text-center mb-2">Tabular Data</h3>
-            <img src="assets/data-good.png" alt="Tabular Data Display" class="w-full rounded-lg mb-2">
+            <img src="mobile-computing/task-2/assets/data-good.png" alt="Tabular Data Display" class="w-full rounded-lg mb-2">
             <p class="text-gray-700 text-sm">Historical records of measurements showing time-based tracking of all parameters with timestamp information.</p>
           </div>
           <div class="bg-indigo-50 p-4 rounded-lg">
             <h3 class="font-semibold text-indigo-700 text-center mb-2">Graphical Trend</h3>
-            <img src="assets/moderate.png" alt="Graphical Trend Display" class="w-full rounded-lg mb-2">
+            <img src="mobile-computing/task-2/assets/moderate.png" alt="Graphical Trend Display" class="w-full rounded-lg mb-2">
             <p class="text-gray-700 text-sm">Line graph visualization showing air quality parameter trends over time, enabling pattern recognition.</p>
           </div>
           <div class="bg-indigo-50 p-4 rounded-lg">
             <h3 class="font-semibold text-indigo-700 text-center mb-2">Dashboard Metrics</h3>
-            <img src="assets/very-unhealthy.png" alt="Dashboard Display" class="w-full rounded-lg mb-2">
+            <img src="mobile-computing/task-2/assets/very-unhealthy.png" alt="Dashboard Display" class="w-full rounded-lg mb-2">
             <p class="text-gray-700 text-sm">Status panels showing current readings with color-coded indicators for immediate assessment of air quality.</p>
           </div>
         </div>
