--- a/pcd/task-3/index.html
+++ b/pcd/task-3/index.html
@@ -260,28 +260,28 @@ mask = cv2.bitwise_and(mask, b_intensity_mask)</pre>
                                     <div class="bg-indigo-200 p-2 rounded-full mr-2 flex-shrink-0">01</div>
                                     <div class="bg-gray-100 p-2 rounded-lg flex-grow">
                                         <h4 class="font-semibold">Enhanced Classification Performance</h4>
-                                        <p class="text-sm text-gray-700">Diharapkan dapat meningkatkan akurasi hingga 20%, karena fokus pada bentuk objek dan menghilangkan area yang tidak begitu diperlukan.</p>
+                                        <p class="text-sm text-gray-700">It is expected to improve accuracy by up to 20%, as it focuses on the shape of the object and eliminates areas that are not so necessary.</p>
                                     </div>
                                 </div>
                                 <div class="flex">
                                     <div class="bg-indigo-200 p-2 rounded-full mr-2 flex-shrink-0">02</div>
                                     <div class="bg-gray-100 p-2 rounded-lg flex-grow">
                                         <h4 class="font-semibold">Better Morphological Analysis</h4>
-                                        <p class="text-sm text-gray-700">Diharapkan batas sel yang lebih bersih dapat memungkinkan pengukuran morfologi yang lebih akurat (ukuran, bentuk, rasio inti-sitoplasma), yang krusial untuk diagnosis leukemia dan gangguan darah lainnya.</p>
+                                        <p class="text-sm text-gray-700">It is hoped that cleaner cell boundaries can allow for more accurate measurements of morphology (size, shape, nucleus-cytoplasmic ratio), which is crucial for the diagnosis of leukemia and other blood disorders.</p>
                                     </div>
                                 </div>
                                 <div class="flex">
                                     <div class="bg-indigo-200 p-2 rounded-full mr-2 flex-shrink-0">03</div>
                                     <div class="bg-gray-100 p-2 rounded-lg flex-grow">
                                         <h4 class="font-semibold">Improved Model Training Efficiency</h4>
-                                        <p class="text-sm text-gray-700">Diharapkan dapat mengurangi waktu pelatihan karena data citra sudah di-cleaning dan diringkas ke bentuk yang pas, sehingga model dapat belajar dari fitur yang relevan saja.</p>
+                                        <p class="text-sm text-gray-700">It is hoped that it can reduce training time because the image data has been cleaned and summarized into the right shape, so that the model can learn from only the relevant features.</p>
                                     </div>
                                 </div>
                                 <div class="flex">
                                     <div class="bg-indigo-200 p-2 rounded-full mr-2 flex-shrink-0">04</div>
                                     <div class="bg-gray-100 p-2 rounded-lg flex-grow">
                                         <h4 class="font-semibold">Object Detection Enhancement</h4>
-                                        <p class="text-sm text-gray-700">Diharapkan model YOLO untuk deteksi sel darah dapat menunjukkan peningkatan performa yang signifikan ketika dilatih dengan gambar yang telah melalui proses filtering.</p>
+                                        <p class="text-sm text-gray-700">It is hoped that the YOLO model for blood cell detection can show a significant improvement in performance when trained with images that have gone through the filtering process.</p>
                                     </div>
                                 </div>
                             </div>
@@ -289,7 +289,7 @@ mask = cv2.bitwise_and(mask, b_intensity_mask)</pre>
                             <div class="bg-yellow-50 p-3 rounded-lg mt-4">
                                 <h4 class="font-semibold mb-1">Future Applications</h4>
                                 <p class="text-sm text-gray-700">
-                                    Pipeline preprocessing ini diharapkan dapat diintegrasikan ke dalam sistem analisis sel darah lengkap untuk penghitungan diferensial otomatis, skrining leukemia, dan kontrol kualitas di laboratorium klinis. Teknik median filtering diharapkan akan sangat berharga untuk memproses gambar apusan darah dengan kualitas bervariasi dari peralatan mikroskop yang berbeda.
+                                    This preprocessing pipeline is expected to be integrated into a complete blood cell analysis system for automated differential counting, leukemia screening, and quality control in clinical laboratories. The median filtering technique is expected to be invaluable for processing blood smear images of varying quality from different microscope equipment.
                                 </p>
                             </div>
                         </div>
