--- a/pcd/task-3/index.html
+++ b/pcd/task-3/index.html
@@ -244,7 +244,7 @@ mask = cv2.bitwise_and(mask, b_intensity_mask)</pre>
                         <div>
                             <h3 class="text-lg font-semibold mb-3">Preprocessing Results</h3>
                             <div class="bg-indigo-50 p-4 rounded-lg mb-4">
-                                <img src="assets/ig_MMY_135306.jpg_steps.png" alt="Blood cell types from the dataset" class="w-full h-auto mx-auto rounded-lg mb-3">
+                                <img src="assets/ig_MMY_135306.jpg_steps.png" alt="Blood cell types from the dataset" class="w-100 h-auto mx-auto rounded-lg">
                                 <p class="text-center text-gray-600 text-sm mt-2">Steps Result Preprocessing</p>
                             </div>
                             
@@ -291,6 +291,21 @@ mask = cv2.bitwise_and(mask, b_intensity_mask)</pre>
                                 <p class="text-sm text-gray-700">
                                     This preprocessing pipeline is expected to be integrated into a complete blood cell analysis system for automated differential counting, leukemia screening, and quality control in clinical laboratories. The median filtering technique is expected to be invaluable for processing blood smear images of varying quality from different microscope equipment.
                                 </p>
+                            </div>
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                                <div class="p-3">
+                                    <div class="bg-gray-100 p-4 rounded-lg mb-4">
+                                        <img src="assets/neutrophil_SNE_813844.jpg_steps.png" alt="Blood cell types from the dataset" class="w-64 h-auto mx-auto rounded-lg">
+                                        <p class="text-center text-gray-600 text-sm mt-2">Neutrophil Result</p>
+                                    </div>
+                                </div>
+                                <div class="p-3">
+                                    <div class="bg-gray-100 p-4 rounded-lg mb-4">
+                                        <img src="assets/eosinophil_EO_217076.jpg_steps.png" alt="Blood cell types from the dataset" class="w-64 h-auto mx-auto rounded-lg">
+                                        <p class="text-center text-gray-600 text-sm mt-2">Eosinophil Result</p>
+                                    </div>
+                                </div>
+                                
                             </div>
                         </div>
                     </div>
