--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <section class="profile-section">
             <div class="profile-pic">
-                <i class="fas fa-user"></i>
+                <img class="w-10 h-10 rounded-full" src="avatar.png" alt="Dewok avatar">
             </div>
             <div class="profile-info">
                 <h2>Master's Student in Computer Science</h2>
